configure.ac, Makefile.am: Use CFLAGS and LIBS instead of os_cflags and os_libs
Instead of introducing variables for system-specific flags and libraries,
use CFLAGS and LIBS. This simplifies the Makefiles since automake appends
these automatically.

Signed-off-by: Bart Van Assche <bart.vanassche@wdc.com>

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -52,7 +52,7 @@ lib_LTLIBRARIES = libsgutils2.la
 
 libsgutils2_la_LDFLAGS = -version-info 2:0:0 -no-undefined
 
-libsgutils2_la_LIBADD = @GETOPT_O_FILES@ @os_libs@
+libsgutils2_la_LIBADD = @GETOPT_O_FILES@
 libsgutils2_la_DEPENDENCIES = @GETOPT_O_FILES@
 
 
