--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -499,6 +499,7 @@ PACKAGE_TARNAME = @PACKAGE_TARNAME@
 PACKAGE_URL = @PACKAGE_URL@
 PACKAGE_VERSION = @PACKAGE_VERSION@
 PATH_SEPARATOR = @PATH_SEPARATOR@
+PTHREAD_LIB = @PTHREAD_LIB@
 RANLIB = @RANLIB@
 SED = @SED@
 SET_MAKE = @SET_MAKE@
@@ -590,7 +591,7 @@ sg_map_LDADD = ../lib/libsgutils2.la @os_libs@
 sgm_dd_LDADD = ../lib/libsgutils2.la @os_libs@
 sg_modes_LDADD = ../lib/libsgutils2.la @os_libs@
 sg_opcodes_LDADD = ../lib/libsgutils2.la @os_libs@
-sgp_dd_LDADD = ../lib/libsgutils2.la @os_libs@ -lpthread
+sgp_dd_LDADD = ../lib/libsgutils2.la @os_libs@ @PTHREAD_LIB@
 sg_persist_LDADD = ../lib/libsgutils2.la @os_libs@
 sg_prevent_LDADD = ../lib/libsgutils2.la @os_libs@
 sg_raw_LDADD = ../lib/libsgutils2.la @os_libs@
