configure.ac: Avoid code duplication
Ensure that the code for checking the Linux NVMe headers occurs once.

Signed-off-by: Bart Van Assche <bart.vanassche@wdc.com>

--- a/config.h.in
+++ b/config.h.in
@@ -105,7 +105,7 @@
 /* sg3_utils on FreeBSD */
 #undef SG_LIB_FREEBSD
 
-/* assume sg3_utils on linux */
+/* sg3_utils on linux */
 #undef SG_LIB_LINUX
 
 /* also MinGW environment */
